attempt to solve modal issue on iOS

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -126,3 +126,7 @@ body {
     font-size: .75rem;
   }
 }
+
+.modal .fade {
+  top: auto;
+}
